# Carieer_crew

./: README.md  pyproject.toml
src/crewaiproject3/: crew.py  main.py
src/crewaiproject3/config/: agents.yaml  tasks.yaml
