[project]
name = "crewaiproject3"
version = "0.1.0"
description = "crewaiproject3 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
crewaiproject3 = "crewaiproject3.main:run"
run_crew = "crewaiproject3.main:run"
train = "crewaiproject3.main:train"
replay = "crewaiproject3.main:replay"
test = "crewaiproject3.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
